# Modelling-Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  utils.cpp
demo/: CMakeCache.txt  CMakeLists.txt  Makefile  basic_opencv  basic_opencv.cxx  cmake_install.cmake  main.cpp  maincourse1.cxx  maincourse1_v2.cxx  maincourse3.cxx  starter-1.cxx  starter-2.cxx  starter-3.cxx  starter4.cxx
docs/: CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake
include/: CMakeLists.txt  Makefile  cmake_install.cmake  draw.hpp  transformations.hpp  utils.hpp
include/interpolation/: interpolation.hpp  interpolator.hpp  lancinterpolator.hpp  lininterpolator.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  draw.cpp  transformations.cpp  utils.cpp
src/interpolation/: lancinterpolator.cxx  lininterpolator.cxx
